Next release
============

Features
--------

- The ``pyramid.events.BeforeRender`` event now has an attribute named
  ``rendering_val``.  This can be used to introspect the value returned by a
  view in a BeforeRender subscriber.

- New configurator directive:
  ``pyramid.config.Configurator.add_request_handler``.  This directive adds
  a request handler factory.

  A request handler factory is used to wrap the Pyramid router's primary
  request handling function.  This is a feature may be used by framework
  extensions, to provide, for example, view timing support and as a
  convenient place to hang bookkeeping code that examines exceptions before
  they are returned to the server.

  A request handler factory (passed as ``handler_factory``) must be a
  callable which accepts two arguments: ``handler`` and ``registry``.
  ``handler`` will be the request handler being wrapped.  ``registry`` will
  be the Pyramid application registry represented by this Configurator.  A
  request handler factory must return a request handler when it is called.

  A request handler accepts a request object and returns a response object.

  Here's an example of creating both a handler factory and a handler, and
  registering the handler factory:

  .. code-block:: python

       import time

       def timing_handler_factory(handler, registry):
           if registry.settings['do_timing']:
               # if timing support is enabled, return a wrapper
               def timing_handler(request):
                   start = time.time()
                   try:
                       response = handler(request)
                   finally:
                       end = time.time()
                       print: 'The request took %s seconds' % (end - start)
                   return response
               return timing_handler
           # if timing support is not enabled, return the original handler
           return handler
